[0.1.3+SVN]
* Bans lists. <wrzasq>
* Bugfixes. <wrzasq>

[0.1.2]
* OTAdmin protocol support. <wrzasq>
* Supports bank balance. <wrzasq>
* getStorage()/setStorage() methods in OTS_Player class. <wrzasq>
* More secured. <wrzasq>
* Fixed buffered streams to use little-endian storage (like Open Tibia does). <wrzasq>
* Implemented NetworkMessage. <wrzasq>

[0.1.1]
* Loading groups by names. <wrzasq>
* Constructors with optional identifier argument for automatical object loading. <wrzasq>
* OTS_Toolbox class. <wrzasq>
* Access calculations in OTS_Account class. <wrzasq>
* E_OTS_General class. <wrzasq>

[0.1.0]
* Houses support. <wrzasq>
* No need to call POT::createObject(). <wrzasq>
* Separated data/ directory resources loaders. <wrzasq>
* Default data/ directory resources instances within POT class. <wrzasq>
* Each data/ directory resource reader class implements an Iterator/IteratorAggregate, Countable and ArrayAccess interfaces. <wrzasq>
* Uses IteratorAggregate interface instead of Iterator in some places (returns ArrayIterator as iterator). <wrzasq>
* __get()/__set() implementation. <wrzasq>
* __toString() as display drivers. <wrzasq>
* Additional wrappers for resource binds. <wrzasq>
* Some additional updates to match OTServ development. <wrzasq>
* Fixed some typos. <wrzasq>
* Code cleanup. <wrzasq>

[0.0.8]
* Added items.xml and items.otb files support. <wrzasq>
* Added Iterator and Countable interfaces implementation in OTS_OTBMFile class. <wrzasq>
* Fixed quoting guild rank name while updating. <wrzasq>
* Fixed custom fields reading in OTS_Guild class. <wrzasq>

[0.0.7]
* Updated for last database changes. <wrzasq>
* Even more PHP 5.0 compatibility. <wrzasq>
* Added spells support. <wrzasq>
* Added possibility to sort lists by custom fields, not only selected. <wrzasq>
* Fixed typos. <wrzasq>

[0.0.6]
* Updated for last database changes. <wrzasq>
* Increased PHP 5.0 compatibility. <wrzasq>
* Added generic binary formats reader with cache drivers. <wrzasq>