@@ -1,4 +1,4 @@
-all: clean check documentation pdf online test package
+all: clean check documentation pdf online test package manual
 
 clean:
 	find . -name "*~" -exec rm {} -v \;
@@ -27,17 +27,23 @@ test:
 
 package: pot.tar.gz
 
-pot.tar.gz: documentation.pdf
+pot.tar.gz:
 	mkdir pot
 	cp ../../otserv/trunk/AUTHORS pot
 	cp CHANGELOG pot
 	cp INSTALL pot
 	cp LICENSE pot
+	cp LICENSE.PEAR.CRYPT_RSA pot
+	cp LICENSE.PEAR.CRYPT_XTEA pot
 	cp NEWS pot
 	cp README pot
 	cp RULES pot
 	cp compat.php pot
-	cp documentation.pdf pot
 	cp -r classes pot/pot
 	rm -rf pot/pot/.svn
 	tar -zcf pot.tar.gz pot/*
+
+manual: documentation.tar.gz
+
+documentation.tar.gz: documentation.pdf
+	tar -zcf documentation.tar.gz documentation.pdf
