@@ -13,7 +13,6 @@
  * @author Wrzasq <wrzasq@gmail.com>
  * @copyright 2007 - 2008 (C) by Wrzasq
  * @license http://www.gnu.org/licenses/lgpl-3.0.txt GNU Lesser General Public License, Version 3
- * @todo 0.1.3: Complete phpUnit test.
  * @todo 0.1.3: More detailed documentation and tutorials, also update examples and tutorials.
  * @todo 0.1.3: PHAR and PHK packages.
  * @todo 1.0.0: Code as C++ extension (as an alternative to pure PHP library which of course would still be available).
