@@ -7,6 +7,7 @@
 
 /**
  * @package POT
+ * @version 0.1.3+SVN
  * @author Wrzasq <wrzasq@gmail.com>
  * @copyright 2007 (C) by Wrzasq
  * @license http://www.gnu.org/licenses/lgpl-3.0.txt GNU Lesser General Public License, Version 3
@@ -16,6 +17,13 @@
  * OTAdmin protocol client.
  * 
  * @package POT
+ * @version 0.1.3+SVN
+ * @property-read bool $requiresLogin requiresLogin() wrapper.
+ * @property-read bool $requiresEncryption requiresEncryption() wrapper.
+ * @property-read bool $usesRSA1024XTEA usesRSA1024XTEA() wrapper.
+ * @property-read int $ping Ping time.
+ * @property-write string $login Logs in with given password.
+ * @property-write string $broadcast Sends given broadcast message.
  */
 class OTS_Admin
 {
@@ -377,27 +385,62 @@ class OTS_Admin
         fclose($this->socket);
     }
 
-/*
+/**
+ * Magic PHP5 method.
+ * 
+ * @version 0.1.3+SVN
+ * @since 0.1.3+SVN
+ * @param string $name Property name.
+ * @param mixed $value Property value.
+ * @throws OutOfBoundsException For non-supported properties.
+ */
     public function __get($name)
     {
         switch($name)
         {
+            case 'requiresLogin':
+                return $this->requiresLogin();
+
+            case 'requiresEncryption':
+                return $this->requiresEncryption();
+
+            case 'usesRSA1024XTEA':
+                return $this->usesRSA1024XTEA();
+
+            case 'ping':
+                return $this->ping();
 
             default:
-                return parent::__get($name);
+                throw new OutOfBoundsException();
         }
     }
 
+/**
+ * Magic PHP5 method.
+ * 
+ * @version 0.1.3+SVN
+ * @since 0.1.3+SVN
+ * @param string $name Property name.
+ * @param mixed $value Property value.
+ * @throws OutOfBoundsException For non-supported properties.
+ */
     public function __set($name, $value)
     {
         switch($name)
         {
+            case 'login':
+                $this->login($value);
+                break;
+
+            case 'broadcast':
+                $this->broadcast($value);
+                break;
 
             default:
-                parent::__set($name, $value);
+                throw new OutOfBoundsException();
         }
     }
-*/
+
 /**
  * Logs into server.
  * 
