@@ -4,6 +4,8 @@ if (!defined("PHPUnit_MAIN_METHOD")) {
     define("PHPUnit_MAIN_METHOD", "POTTest::main");
 }
 
+set_time_limit(0);
+
 require_once "PHPUnit/Framework/TestCase.php";
 require_once "PHPUnit/Framework/TestSuite.php";
 
@@ -81,7 +83,7 @@ class POTListener implements PHPUnit_Framework_TestListener
 
     public function startTestSuite(PHPUnit_Framework_TestSuite $suite)
     {
-        echo self::TERM_BOLD, 'PHP OTServ Toolkit test suite for phpUnit', self::TERM_END, "\n\n";
+        echo self::TERM_BOLD, 'PHP OTServ Toolkit test suite for phpUnit', self::TERM_END, "\n\n", 'Diagnostic info:', "\n", 'PHP version: ', self::TERM_BLUE, PHP_VERSION, self::TERM_END, "\n", 'Operating system: ', self::TERM_BLUE, PHP_OS, self::TERM_END, "\n", 'SAPI interface: ', self::TERM_BLUE, PHP_SAPI, self::TERM_END, "\n\n";
     }
 
     public function endTestSuite(PHPUnit_Framework_TestSuite $suite)
@@ -94,9 +96,6 @@ class POTListener implements PHPUnit_Framework_TestListener
  * Generated by PHPUnit_Util_Skeleton on 2007-08-10 at 20:49:59.
  */
 class POTTest extends PHPUnit_Framework_TestCase {
-    // your configuration here
-    private $config = array('host' => 'localhost', 'user' => 'wrzasq', 'database' => 'otserv');
-
     private $ots;
 
     /**
@@ -109,7 +108,7 @@ class POTTest extends PHPUnit_Framework_TestCase {
         $results = new PHPUnit_Framework_TestResult();
         $results->addListener( new POTListener() );
 
-        $suite  = new PHPUnit_Framework_TestSuite("POTTest");
+        $suite = new PHPUnit_Framework_TestSuite("POTTest");
         $suite->run($results);
     }
 
@@ -130,62 +129,6 @@ class POTTest extends PHPUnit_Framework_TestCase {
      * @access protected
      */
     protected function tearDown() {
-    }
-
-    public function testGetInstance() {
-        $ots = POT::getInstance();
-        $this->assertEquals(true, $ots === $this->ots);
-    }
-
-    public function testLoadClass() {
-        try
-        {
-            $this->ots->loadClass('IOTS_DB');
-            $this->assertEquals(true, interface_exists('IOTS_DB') );
-            $this->ots->loadClass('Foo');
-        }
-        catch(Exception $e)
-        {
-            $this->assertEquals('\'Foo\' is not part of PHP OTS Toolkit.', $e->getMessage() );
-        }
-    }
-
-    public function testConnect() {
-        $this->ots->loadClass('IOTS_DB');
-        $this->ots->loadClass('OTS_DB_MySQL');
-        $this->ots->loadClass('OTS_DB_SQLite');
-        $this->ots->loadClass('OTS_SQLite_Results');
-
-        $this->ots->connect(POT::DB_MYSQL, $this->config);
-        $this->ots->connect(POT::DB_SQLITE, $this->config);
-
-        try
-        {
-            $this->ots->connect('Foo', $this->config);
-        }
-        catch(Exception $e)
-        {
-            $this->assertEquals('Driver \'Foo\' is not supported.', $e->getMessage() );
-        }
-    }
-
-    public function testCreateObject() {
-        $this->ots->loadClass('IOTS_DB');
-        $this->ots->loadClass('IOTS_DAO');
-        $this->ots->loadClass('OTS_DB_SQLite');
-        $this->ots->loadClass('OTS_SQLite_Results');
-        $this->ots->loadClass('OTS_Account');
-        $this->ots->loadClass('OTS_Player');
-
-        $this->ots->connect(POT::DB_SQLITE, $this->config);
-
-        $account = new OTS_Account();
-        $number = $account->create();
-        $players = $account->getPlayersList();
-
-        $this->assertEquals(true, $account->isBlocked() );
-        $this->assertEquals(true, is_int($number) );
-        $this->assertEquals(true, $players instanceof Iterator && count($players) == 0);
     }
 }
 
